--- a/WarmUp9/index.html
+++ b/WarmUp9/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<style type="text/css" src="styles.css"></style>
+	<link rel="stylesheet" href="styles.css">
 	<title></title>
 	<footer>Copy Right Claimer</footer>
 	
@@ -11,7 +11,7 @@
 <body><img src="46412223_1974491819294206_6867654308326801408_n.jpg">
 	<img src="C:\Users\Miftah Muman\Pictures\Home Automation\home-512.png">
 	<img src="C:\Users\Miftah Muman\Pictures\Home Automation\jgsrnaiuc2d63sv6.jpg">
-	
+
 	<ul>
 		<li>First</li>
 		<li>Second</li>
